--- a/angular.json
+++ b/angular.json
@@ -94,9 +94,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "/node_modules/materialize-css/dist/css/materialize.css" 
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/materialize-css/dist/css/materialize.min.css" 
+            ]
           }
         }
       }
