--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/materialize-css/dist/css/materialize.min.css" 
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/materialize-css/dist/js/materialize.min.js" 
+              
+            ]
           },
           "configurations": {
             "production": {
@@ -94,11 +98,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "/node_modules/materialize-css/dist/css/materialize.css" 
+              "src/styles.css"
+             
             ],
             "scripts": [
-              "node_modules/materialize-css/dist/css/materialize.min.css" 
+              
             ]
           }
         }
