--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@types/crypto-js": "^4.0.2",
+    "crypto-js": "^4.1.1",
+    "cryptojs": "^2.5.3",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -27,6 +30,7 @@
     "@angular-devkit/build-angular": "~13.0.3",
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.0",
+    "@types/cryptojs": "^3.1.30",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
